   * Add a few English words/names to dictionaries
   * Add more settings for "Delete auto-backup after" - thx pahtashow 
   * Add more options for actor in custom text export - thx Francois
   * Improve video auto load (allow eg. "_nl") - thx Hilde
   * Improve fix italic tags - thx uckthis
   * Whisper.cpp is default for Windows + in-program download
* FIXED:
   * Fix VLC video player not working
   * Fix for ASSA timestamps (rounding output) - thx Jerome
   * Fix for mp4 subtitle timestamps - thx DrReddP/Ding-adong
   * Fix crash trying to locate Whisper
   * Fix setting path to ffmpeg when using Whisper
   * Fix OCR window resize on Linux - thx Mangoes
   * Fix bookmark showing on first spell check line - thx OmrSi
   * Fix format XIF writing - thx Per
   * Fix for WebVTT with line# hours - thx garion84
   * Fix " 's" / Dutch in "Fix missing spaces"" - thx Jean-Pierre


3.6.8 (24th October 2022)
* NEW:
   * Option to use only "front center" audio channel - thx shanedk
   * Add support for OCR via Google's Cloud Vision API - thx Flitskikker 
   * "Convert colors to dialog" (also batch) - thx Flitskikker 
   * Add EBU stl file property icon - thx Leon 
   * Add new sub format - thx Edward
   * Add new json sub format - thx Flitskikker
   * Add new sub format - thx George
   * Add shortcut "Loop selection" - thx OmrSi
   * Add shortcut for "Open containing folder" - thx OmrSi
   * Add shorcuts for play with speed 1.5x/2x - thx OmrSi
   * Add "nOCR" option to "Batch convert" - thx Gen3ric
   * New proxy settings
   * Add "ASSA image color picker" incl. shortcut - thx Érico
   * Add CLI param /deletecontains:word - thx sweetngx
   * Add ignore white space to compare - thx Leon
   * Enable "Audio to text" for Linux - thx edcol/coastal45
   * Add "Allow overlap" in "Change speed" - thx OmrSi
   * Add bookmarks to spell check dialog - thx cyzs233/OmrSi 
   * Add dictate shortcut for main text box - thx Xenos71